Introducing separate thresholds for different task types
Signed-off-by: PritLadani <pritkladani@gmail.com>